.provarCaches/00D5f000005vwGkEAI/objects/rstk__soconpbdtl__c.object
<CustomObject>
    <description>soconpbdtl__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__soconpbdtl_soconpbill__r.rstk__externalid__c + &apos;_&apos; + TEXT(rstk__soconpbdtl_seq__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__soconpbdtl_soprod__r.rstk__soprod_prod__c + &apos;(&apos; + rstk__soconpbdtl_socondev__r.rstk__socondev_sowarr__r.rstk__sowarr_srlno__c + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_taxable__c</fullName>
        <formula>if(ISPICKVAL(rstk__soconpbdtl_type__c , &apos;Device Recurring Charge&apos;) || ISPICKVAL(rstk__soconpbdtl_type__c , &apos;Once Per Contract Period&apos;),     rstk__soconpbdtl_soconpbrc__r.rstk__soconpbrc_taxable__c, rstk__soconpbdtl_soconchg__r.rstk__soconchg_taxable__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formula Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__formula_taxrate__c</fullName>
        <formula>if(ISPICKVAL(rstk__soconpbdtl_type__c , &apos;Device Recurring Charge&apos;) || ISPICKVAL(rstk__soconpbdtl_type__c , &apos;Once Per Contract Period&apos;),     rstk__soconpbdtl_soconpbrc__r.rstk__soconpbrc_taxrate__c , rstk__soconpbdtl_soconchg__r.rstk__soconchg_taxrate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formula TaxRate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbdtl_altextid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>soconpbdtl_altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__soconpbdtl_amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Amount billed for this charge in this run.</inlineHelpText>
        <label>Billing Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbdtl_chgcomment__c</fullName>
        <inlineHelpText>User-defined comments up to 100 characters in length.</inlineHelpText>
        <label>Change Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbdtl_days__c</fullName>
        <inlineHelpText>The number of days that this recurring charge represents.</inlineHelpText>
        <label>Partial Period Days Billed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbdtl_extcomment__c</fullName>
        <inlineHelpText>Comments intended to be printed on any document generated for Customer.</inlineHelpText>
        <label>External Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbdtl_frompbill__c</fullName>
        <defaultValue>false</defaultValue>
        <description>identifier to check whether it is a part of ‘Generate Recurring Billing’ process or not</description>
        <inlineHelpText>identifier to check whether it is a part of ‘Generate Recurring Billing’ process or not</inlineHelpText>
        <label>Is Generate Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbdtl_intcomment__c</fullName>
        <inlineHelpText>Comments not intended to be printed on any document generated for Customer.</inlineHelpText>
        <label>Internal Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbdtl_rccomment__c</fullName>
        <label>Recurring Charge Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbdtl_rejectprocessed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal field to identify which records were Rejected successfully</description>
        <label>Reject Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbdtl_salesacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Sales (Revenue) account to which this charge will be debited.</inlineHelpText>
        <label>Revenue Account</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>Contract Periodic Billing Detail</relationshipLabel>
        <relationshipName>soconpbdtls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbdtl_seq__c</fullName>
        <inlineHelpText>The sequence number of this Contract Periodic Billing Detail, which is a unique identifier for each detail record associated with a given Contract Periodic Billing.</inlineHelpText>
        <label>Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbdtl_soconchg__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When charge is from a Miscellaneous Charge, this is the Miscellaneous Charge record that was set up for this Contract that drove this charge.</inlineHelpText>
        <label>Miscellaneous Charge</label>
        <referenceTo>rstk__soconchg__c</referenceTo>
        <relationshipLabel>Contract Periodic Billing Detail</relationshipLabel>
        <relationshipName>soconpbdtls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbdtl_socondev__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Covered Serialized Device associated with this billing charge.</inlineHelpText>
        <label>Covered Serialized Devices</label>
        <referenceTo>rstk__socondev__c</referenceTo>
        <relationshipLabel>Contract Periodic Billing Detail</relationshipLabel>
        <relationshipName>soconpbdtls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbdtl_soconpbdev__c</fullName>
        <inlineHelpText>The Covered Serialized Device associated with this billing charge.</inlineHelpText>
        <label>Covered Serialized Device (PB)</label>
        <referenceTo>rstk__soconpbdev__c</referenceTo>
        <relationshipLabel>Contract Periodic Billing Detail</relationshipLabel>
        <relationshipName>soconpbdtls</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbdtl_soconpbill__c</fullName>
        <inlineHelpText>The Contract Periodic Billing that this detail record is associated with.</inlineHelpText>
        <label>Contract Periodic Billing</label>
        <referenceTo>rstk__soconpbill__c</referenceTo>
        <relationshipLabel>Contract Periodic Billing Detail</relationshipLabel>
        <relationshipName>soconpbdtls</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbdtl_soconpbrc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When charge is from a Recurring Charge, this is the Recurring Charge record that was set up for this Contract that drove this charge.</inlineHelpText>
        <label>Billing Recurring Charge</label>
        <referenceTo>rstk__soconpbrc__c</referenceTo>
        <relationshipLabel>Contract Periodic Billing Detail</relationshipLabel>
        <relationshipName>soconpbdtls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbdtl_soinvline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Sales Invoice Line associated with this billing.</inlineHelpText>
        <label>Sales Invoice Line</label>
        <referenceTo>rstk__soinvline__c</referenceTo>
        <relationshipLabel>Contract Periodic Billing Detail</relationshipLabel>
        <relationshipName>soconpbdtls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbdtl_soprod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Product record for the Product associated with the Recurring Charge or Miscellaneous Charge.</inlineHelpText>
        <label>Billing Product</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Contract Periodic Billing Detail</relationshipLabel>
        <relationshipName>soconpbdtls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbdtl_taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates charge is taxable, as defined on the &quot;charge&quot; record that drove this billing.</inlineHelpText>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbdtl_taxamount__c</fullName>
        <formula>IF(rstk__soconpbdtl_taxable__c, (rstk__soconpbdtl_amount__c * rstk__soconpbdtl_taxrate__c / 100), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Tax Amount based on the charge and its Tax Rate.</inlineHelpText>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbdtl_taxrate__c</fullName>
        <inlineHelpText>When the Taxable indicator is checked, this is the rate at which the charge will be taxed, as defined on the &quot;charge&quot; record that drove this billing.</inlineHelpText>
        <label>Tax Rate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbdtl_type__c</fullName>
        <inlineHelpText>The charge type for this billing detail record.  Valid values are 

Device Recurring Charge
Device Miscellaneous Charge
Contract Miscellaneous Charge</inlineHelpText>
        <label>Detail Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Device Recurring Charge</fullName>
                </value>
                <value>
                    <fullName>Device Miscellaneous Charge</fullName>
                </value>
                <value>
                    <fullName>Contract Miscellaneous Charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Trigger Options</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Contract Periodic Billing Detail</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Custom_Contract_Periodic_Billing_Detail</fullName>
        <columns>NAME</columns>
        <columns>rstk__soconpbdtl_soprod__c</columns>
        <columns>rstk__soconpbdtl_soconpbrc__c</columns>
        <columns>rstk__soconpbdtl_amount__c</columns>
        <columns>rstk__soconpbdtl_soconpbill__c</columns>
        <columns>rstk__soconpbdtl_soconpbdev__c</columns>
        <columns>rstk__soconpbdtl_socondev__c</columns>
        <columns>rstk__soconpbdtl_type__c</columns>
        <columns>rstk__soconpbdtl_soinvline__c</columns>
        <columns>rstk__soconpbdtl_frompbill__c</columns>
        <columns>rstk__soconpbdtl_soconchg__c</columns>
        <columns>rstk__soconpbdtl_days__c</columns>
        <columns>rstk__soconpbdtl_salesacct__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Custom Contract Periodic Billing Detail</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Contract Periodic Billing Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Periodic Billing Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Amount_cannot_be_less_than_zero</fullName>
        <active>true</active>
        <description>Created by Saasfocus//Amitppt//09-04-2015
Module-Spec-6209-IDS Billing Engine Enhancement
RefNo- 6209-IDS-SOCONPBDTL__c-VR0008</description>
        <errorConditionFormula>if(AND(Not(ISBLANK(rstk__soconpbdtl_amount__c)), rstk__soconpbdtl_amount__c &lt; 0), true, false )</errorConditionFormula>
        <errorDisplayField>rstk__soconpbdtl_amount__c</errorDisplayField>
        <errorMessage>Billing Amount cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Cannot_Change_Billing_Product</fullName>
        <active>true</active>
        <description>Created by Saasfocus//Amitppt//09-04-2015
Module-Spec-6209-IDS Billing Engine Enhancement
RefNo- 6209-IDS-SOCONPBDTL__c-VR0005</description>
        <errorConditionFormula>ISCHANGED(rstk__soconpbdtl_soprod__c)</errorConditionFormula>
        <errorDisplayField>rstk__soconpbdtl_soprod__c</errorDisplayField>
        <errorMessage>Cannot change Billing Product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Cannot_Change_Billing_Recurr_Charge</fullName>
        <active>true</active>
        <description>Created by Saasfocus//Amitppt//09-04-2015
Module-Spec-6209-IDS Billing Engine Enhancement
RefNo- 6209-IDS-SOCONPBDTL__c-VR0006</description>
        <errorConditionFormula>ISCHANGED(rstk__soconpbdtl_soconpbrc__c)</errorConditionFormula>
        <errorDisplayField>rstk__soconpbdtl_soconpbrc__c</errorDisplayField>
        <errorMessage>Cannot change Billing Recurring Charge.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Cannot_Change_Contract_Periodic_Billing</fullName>
        <active>true</active>
        <description>Created by Saasfocus//Amitppt//09-04-2015
Module-Spec-6209-IDS Billing Engine Enhancement
RefNo- 6209-IDS-SOCONPBDTL__c-VR0002</description>
        <errorConditionFormula>AND(NOT(ISPICKVAL(rstk__soconpbdtl_soconpbill__r.rstk__soconpbill_status__c, &apos;Approved&apos;)), NOT(ISPICKVAL(rstk__soconpbdtl_soconpbill__r.rstk__soconpbill_status__c, &apos;Invoiced&apos;)), ISCHANGED(rstk__soconpbdtl_soconpbill__c))</errorConditionFormula>
        <errorDisplayField>rstk__soconpbdtl_soconpbill__c</errorDisplayField>
        <errorMessage>Cannot change Contract Periodic Billing.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Cannot_Change_Covered_Serialized_Devices</fullName>
        <active>true</active>
        <description>Created by Saasfocus//Amitppt//15-04-2015
Module-Spec-6209-IDS Billing Engine Enhancement
RefNo- 6209-IDS-SOCONPBDTL__c-VR0016</description>
        <errorConditionFormula>ISCHANGED(rstk__soconpbdtl_socondev__c)</errorConditionFormula>
        <errorDisplayField>rstk__soconpbdtl_socondev__c</errorDisplayField>
        <errorMessage>Cannot change Covered Serialized Devices.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Cannot_Change_Detail_Charge_Type</fullName>
        <active>true</active>
        <description>Created by Saasfocus//Amitppt//09-04-2015
Module-Spec-6209-IDS Billing Engine Enhancement
RefNo- 6209-IDS-SOCONPBDTL__c-VR0004</description>
        <errorConditionFormula>ISCHANGED(rstk__soconpbdtl_type__c)</errorConditionFormula>
        <errorDisplayField>rstk__soconpbdtl_type__c</errorDisplayField>
        <errorMessage>Cannot change Detail Charge Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Cannot_Change_Misc_Charge</fullName>
        <active>true</active>
        <description>Created by Saasfocus//Amitppt//15-04-2015
Module-Spec-6209-IDS Billing Engine Enhancement
RefNo- 6209-IDS-SOCONPBDTL__c-VR0015</description>
        <errorConditionFormula>ISCHANGED(rstk__soconpbdtl_soconchg__c)</errorConditionFormula>
        <errorDisplayField>rstk__soconpbdtl_soconchg__c</errorDisplayField>
        <errorMessage>Cannot change Miscellaneous Charge.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Cannot_Change_Sales_Invoice_Line</fullName>
        <active>true</active>
        <description>Created by Saasfocus//Amitppt//09-04-2015
Module-Spec-6209-IDS Billing Engine Enhancement
RefNo- 6209-IDS-SOCONPBDTL__c-VR0007</description>
        <errorConditionFormula>AND(ISCHANGED(rstk__soconpbdtl_soinvline__c), rstk__soconpbdtl_soinvline__c!=null, PRIORVALUE(rstk__soconpbdtl_soinvline__c) != null)</errorConditionFormula>
        <errorDisplayField>rstk__soconpbdtl_soinvline__c</errorDisplayField>
        <errorMessage>Cannot change Sales Invoice Line.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Cannot_Change_Sequence</fullName>
        <active>true</active>
        <description>Created by Saasfocus//Amitppt//09-04-2015
Module-Spec-6209-IDS Billing Engine Enhancement
RefNo- 6209-IDS-SOCONPBDTL__c-VR0003</description>
        <errorConditionFormula>ISCHANGED(rstk__soconpbdtl_seq__c)</errorConditionFormula>
        <errorDisplayField>rstk__soconpbdtl_seq__c</errorDisplayField>
        <errorMessage>Cannot change Sequence.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Prevent_Insert_for_Aprvd_PeriodicBIlling</fullName>
        <active>true</active>
        <description>Created by Saasfocus//Amitppt//09-04-2015
Module-Spec-6209-IDS Billing Engine Enhancement
RefNo- 6209-IDS-SOCONPBDTL__c-VR0001</description>
        <errorConditionFormula>AND(ISNEW(), OR(ISPICKVAL(rstk__soconpbdtl_soconpbill__r.rstk__soconpbill_status__c ,&apos;Approved&apos;) , ISPICKVAL(rstk__soconpbdtl_soconpbill__r.rstk__soconpbill_status__c ,&apos;Invoiced&apos;)))</errorConditionFormula>
        <errorDisplayField>rstk__soconpbdtl_soconpbill__c</errorDisplayField>
        <errorMessage>No insert is allowed for &apos;Approved&apos; or &apos;Invoiced&apos; Contract Periodic Billing.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Recurr_Chrg_Days_cannot_be_less_than_0</fullName>
        <active>true</active>
        <description>Created by Saasfocus//Amitppt//09-04-2015
Module-Spec-6209-IDS Billing Engine Enhancement
RefNo- 6209-IDS-SOCONPBDTL__c-VR0009</description>
        <errorConditionFormula>if(AND(Not(ISBLANK(rstk__soconpbdtl_days__c)), rstk__soconpbdtl_days__c &lt; 0), true, false )</errorConditionFormula>
        <errorDisplayField>rstk__soconpbdtl_days__c</errorDisplayField>
        <errorMessage>Recurring Charge Days cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Revenue_Account_Does_not_meet_criteria</fullName>
        <active>true</active>
        <description>Created by Saasfocus//Amitppt//09-04-2015 
Module-Spec-6209-IDS Billing Engine Enhancement 
RefNo- 6209-IDS-SOCONPBDTL__c-VR0010</description>
        <errorConditionFormula>AND(NOT(ISBLANK(rstk__soconpbdtl_salesacct__c)), OR(rstk__soconpbdtl_salesacct__r.rstk__syacc_div__c != rstk__soconpbdtl_soconpbill__r.rstk__soconpbill_socontract__r.rstk__socontract_div__c, NOT(ISPICKVAL(rstk__soconpbdtl_salesacct__r.rstk__syacc_gltype_pl__c, &apos;Revenue&apos;))))</errorConditionFormula>
        <errorDisplayField>rstk__soconpbdtl_salesacct__c</errorDisplayField>
        <errorMessage>Selected Value does not meet the filter criteria.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__SOCONPBDTL_SOCONCHG_Blank_with_condition</fullName>
        <active>true</active>
        <description>Created by Saasfocus//Alok Verma//28-04-2015 
Module-Spec-6209-IDS Billing Engine Enhancement 
RefNo- 6209-IDS-SOCONPBDTL__c-VR0017
Must be blank when not added as a part of the ‘Generate Recurring Billing’ process on insert</description>
        <errorConditionFormula>AND(isNew(),NOT(rstk__soconpbdtl_frompbill__c),NOT(ISBLANK( rstk__soconpbdtl_soconchg__c)) )</errorConditionFormula>
        <errorDisplayField>rstk__soconpbdtl_soconchg__c</errorDisplayField>
        <errorMessage>Miscellaneous Charge must be blank when not added as a part of the &apos;Generate Recurring Billing&apos; process</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__SOCONPBDTL_SOCONDEV_Blank_with_condition</fullName>
        <active>true</active>
        <description>Created by Saasfocus//Amitppt//15-04-2015
Module-Spec-6209-IDS Billing Engine Enhancement
RefNo- 6209-IDS-SOCONPBDTL__c-VR0013</description>
        <errorConditionFormula>AND(isNew(),ISPICKVAL(rstk__soconpbdtl_type__c, &apos;Contract Miscellaneous Charge&apos;), NOT(ISBLANK(rstk__soconpbdtl_socondev__c)))</errorConditionFormula>
        <errorDisplayField>rstk__soconpbdtl_socondev__c</errorDisplayField>
        <errorMessage>Covered Serialized Device must be blank if Detail Charge Type is &quot;Contract Miscellaneous Charge&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__SOCONPBDTL_SOCONDEV_Req_with_condition</fullName>
        <active>true</active>
        <description>Created by Saasfocus//Amitppt//15-04-2015
Module-Spec-6209-IDS Billing Engine Enhancement
RefNo- 6209-IDS-SOCONPBDTL__c-VR0014</description>
        <errorConditionFormula>AND(isNew(), or( (!ISBLANK(rstk__soconpbdtl_socondev__c) &amp;&amp; rstk__soconpbdtl_soconpbill__r.rstk__soconpbill_socontract__c !=  rstk__soconpbdtl_socondev__r.rstk__socondev_socontract__c),AND(ISBLANK(rstk__soconpbdtl_socondev__c),NOT(ISPICKVAL(rstk__soconpbdtl_type__c, &apos;Contract Miscellaneous Charge&apos;)), NOT(ISPICKVAL(rstk__soconpbdtl_type__c, &apos;Once Per Contract Period&apos;)))))</errorConditionFormula>
        <errorDisplayField>rstk__soconpbdtl_socondev__c</errorDisplayField>
        <errorMessage>Either Covered Serialized Device is blank or does not meet the criteria.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__SOCONPBDTL_SOCONPBRC_Blank_condition</fullName>
        <active>true</active>
        <description>Created by Saasfocus//Alok Verma//28-04-2015 
Module-Spec-6209-IDS Billing Engine Enhancement 
RefNo- 6209-IDS-SOCONPBDTL__c-VR0018
Must be blank when not added as a part of the ‘Generate Recurring Billing’ process on insert</description>
        <errorConditionFormula>AND(isNew(),NOT(rstk__soconpbdtl_frompbill__c),NOT(ISBLANK( rstk__soconpbdtl_soconpbrc__c)) )</errorConditionFormula>
        <errorDisplayField>rstk__soconpbdtl_soconpbrc__c</errorDisplayField>
        <errorMessage>Billing Recurring Charge must be blank when not added as a part of the &apos;Generate Recurring Billing&apos; process</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__SOCONPBDTL_SOINVLIN_Blank_with_condition</fullName>
        <active>true</active>
        <description>Created by Saasfocus//Alok Verma//28-04-2015 
Module-Spec-6209-IDS Billing Engine Enhancement 
RefNo- 6209-IDS-SOCONPBDTL__c-VR0019
Must be blank</description>
        <errorConditionFormula>AND(isNew(),NOT(ISBLANK( rstk__soconpbdtl_soinvline__c)) )</errorConditionFormula>
        <errorDisplayField>rstk__soconpbdtl_soinvline__c</errorDisplayField>
        <errorMessage>Sales Invoice Line must be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__SOCONPBDTL_SOPROD_Req_with_condition</fullName>
        <active>true</active>
        <description>Created by Saasfocus//Amitppt//15-04-2015
Module-Spec-6209-IDS Billing Engine Enhancement
RefNo- 6209-IDS-SOCONPBDTL__c-VR0012</description>
        <errorConditionFormula>AND(isNew(), OR(isblank(rstk__soconpbdtl_soprod__c), rstk__soconpbdtl_soprod__r.rstk__soprod_div__c != rstk__soconpbdtl_soconpbill__r.rstk__soconpbill_socontract__r.rstk__socontract_div__c, NOT(OR( ISPICKVAL(rstk__soconpbdtl_soprod__r.rstk__soprod_prodtype__c, &apos;Recurring Service&apos;), ISPICKVAL(rstk__soconpbdtl_soprod__r.rstk__soprod_prodtype__c, &apos;Service&apos;), ISPICKVAL(rstk__soconpbdtl_soprod__r.rstk__soprod_prodtype__c, &apos;Miscellaneous&apos;)))))</errorConditionFormula>
        <errorDisplayField>rstk__soconpbdtl_soprod__c</errorDisplayField>
        <errorMessage>Either Billing Product is blank or does not meet the criteria.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__SOCONPBDTL_TYPE_Required_on_Insert</fullName>
        <active>true</active>
        <description>Created by Saasfocus//Amitppt//15-04-2015
Module-Spec-6209-IDS Billing Engine Enhancement
RefNo- 6209-IDS-SOCONPBDTL__c-VR0011</description>
        <errorConditionFormula>AND(isNew(), isBlank(text(rstk__soconpbdtl_type__c) ))</errorConditionFormula>
        <errorDisplayField>rstk__soconpbdtl_type__c</errorDisplayField>
        <errorMessage>Detail Charge Type cannot be blank.</errorMessage>
    </validationRules>
</CustomObject>